[package]
name = "piston-mc"
version = "0.0.1-alpha"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.148" }
chrono = { version = "0.4.42", features = ["serde"] }
reqwest = { version = "0.12.28", features = ["json"] }
anyhow = { version = "1.0.100" }
log = { version = "0.4.29" }
sha1 = { version = "0.11.0-rc.3" }
tokio = {version = "1.48.0", features = ["sync"]}
thiserror = {version = "2.0.17"}


[dev-dependencies]
tokio = { version = "1.48.0", features = ["macros"] }
pretty_env_logger = { version = "0.5.0" }