[package]
name = "piston-mc"
version = "0.1.0-beta"
edition = "2024"
description = "A library for interacting with mojangs piston-mc api"
authors = ["Drew Chase"]
repository = "https://github.com/Drew-Chase/piston-mc.git"
documentation = "https://github.com/Drew-Chase/piston-mc/wiki"
categories = ["api-bindings", "network-programming", "games"]
keywords = ["minecraft", "piston", "mc", "piston-mc", "java"]
license-file = "LICENSE"
readme = "README.MD"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.148" }
chrono = { version = "0.4.42", features = ["serde"] }
reqwest = { version = "0.12.28", features = ["json", "stream"], optional = true }
anyhow = { version = "1.0.100" }
log = { version = "0.4.29" , optional = true}
sha1 = { version = "0.11.0-rc.3" }
tokio = {version = "1.48.0", features = ["sync", "fs"]}
thiserror = {version = "2.0.17"}
futures-util = "0.3.31"


[dev-dependencies]
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
pretty_env_logger = { version = "0.5.0" }


[features]
default = ["java", "assets", "downloads"]
java = []
assets = ["downloads"]
downloads = ["dep:reqwest"]
log = ["dep:log"]
news = []
java-patch-notes = ["dep:reqwest"]
bedrock-patch-notes = ["dep:reqwest"]
dungeons-patch-notes = ["dep:reqwest"]
launcher-patch-notes = ["dep:reqwest"]
patch-notes = ["java-patch-notes", "bedrock-patch-notes", "dungeons-patch-notes", "launcher-patch-notes"]